auto load rss db and config

--- a/web/templates/todo.html
+++ b/web/templates/todo.html
@@ -6,6 +6,6 @@
 </form>
 
 {% for item in items %}
-  <h1> {{ item.title }} </h1>
+  <p> {{ item.title }} </p>
   <p> {{ item.source }} <p>
 {% endfor %}
