--- a/web/templates/todo.html
+++ b/web/templates/todo.html
@@ -1,11 +1,19 @@
-<div>Hello There</div>
-<form action="/new" method="POST">
+<br>Total count = {{tot}}<br>
+
+<div>Use this to delete 1 article</div>
+<form action="/deleteOne" method="POST">
   <input type="text" name="title">Article title</input>
   <input type="text" name="source">Article body</input>
   <input type="submit"></input>
 </form>
 
+<table>
+
 {% for item in items %}
-  <p> {{ item.title }} </p>
-  <p> {{ item.source }} <p>
+<tr>
+  <td> {{ item.title }} </td>
+  <td> {{ item.source }} </td>
+  </tr>
 {% endfor %}
+
+</table>
