--- a/web/templates/todo.html
+++ b/web/templates/todo.html
@@ -6,14 +6,15 @@
   <input type="text" name="source">Article body</input>
   <input type="submit"></input>
 </form>
-
+<div>
 <table>
 
 {% for item in items %}
 <tr>
   <td> {{ item.title }} </td>
   <td> {{ item.source }} </td>
-  </tr>
+ </tr>
 {% endfor %}
 
 </table>
+</div>
